<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.edu.ifma.openbyodmobileside.fragmento.FragmentoContato">

    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/nomeContato"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contactNameHint"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/telefoneContato"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contactNumberHint"
            android:inputType="number"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/emailContato"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contactEmailHint"
            android:inputType="textEmailAddress"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/empresaContato"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contactEmpresaHint"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>